/*
 * $Id: ChangeLog,v 1.5263 2006/12/02 14:10:53 modalsist Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/
2006-12-02 14:00 UTC-0300 Luiz Rafael Culik<luiz at xharbour.com.br>
  * xharbour.spec
    +bmdbfcdx.a added to file list

2006-12-02 12:10 UTC-0300 Eduardo Fernandes <modalsist@yahoo.com.br>
  * source/ct/dattime3.prg
    ! fixed showtime() function that was showing the time if we call
      showtime(), whithout parameters, more than once.

2006-12-01 11:35 UTC-0500 Ron Pinkas <ron/at/xharbour.com>
  * include/hbextern.ch
    * Protected windows only symbols of CT3 with #ifdef __PLATFORM__Windows
  * utils/xbscript/xbscript.prg
    * Removed define CT3NET and added #ifndef NOCT3 protection for #defiine CT3

2006-12-01 09:45 UTC-0300 Eduardo Fernandes <modalsist@yahoo.com.br>
  * makefile.pc
    + added mpr.lib to build xbscript.exe
  * hrbdll.bc
    ! fixed missing ct sources (pack.c and getsecrt.prg)
  * dll_b32.bat
    ! fixed to generate harbour.dll at bin folder instead lib.
  * changelog
    + added missing last entry from Phil Krylov.

2006-11-30 19:31 UTC-0500 Ron Pinkas <ron/at/xharbour.com>
  * hrbdll.bc
  * hrbdll.vc
  * makefile.vc
    + Added missing ct sources (pack.c and getsecrt.prg)
    + Added mpr.lib to list of C Win libs
    + Added ct.lib when building xbscript

  * include/hbextern.ch
    + Added missing CT external protected by #ifdef CT and nested #ifdef CTNET
      /* NOTE: we should decide if CT is a standard module like the rest of the RTL, and if so ... */

  * utils/xbscript/xbscript.prg
    + Added define CT and CTNET before #include "hbextern.ch"

2006-11-30 04:00 UTC+0300 Phil Krylov <phil a t newstar.rinet.ru>
  * bin/hb-mkslib.sh
    ! Workaround for buggy 'mv -f' under MSYS.
  * source/rtl/Makefile
    ! Added dllcall.c.
  * source/rtl/dllcall.c